[gd_scene load_steps=3 format=3 uid="uid://cvcqwnm864s0g"]

[ext_resource type="Script" path="res://Scripts/UI/Lobby/Network/client_server_chat.gd" id="1_b8j0j"]
[ext_resource type="Shortcut" uid="uid://fuvss5hfg4q2" path="res://Resources/Shortcuts/go_back.tres" id="2_1if57"]

[node name="ClientServerChat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b8j0j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonDisconnect" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = ExtResource("2_1if57")
text = "Disconnect"

[node name="ConnectionInfo" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Log" type="Label" parent="MarginContainer/VBoxContainer/ConnectionInfo"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Are we connected?"
autowrap_mode = 2

[node name="Chat" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Chat"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Log" type="Label" parent="MarginContainer/VBoxContainer/Chat/LogScroll"]
layout_mode = 2
text = "Server Moderator: BAN"

[node name="Writing" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Chat"]
layout_mode = 2

[node name="ChatMessage" type="LineEdit" parent="MarginContainer/VBoxContainer/Chat/Writing"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "type some beautiful words here..."
middle_mouse_paste_enabled = false
caret_blink = true

[node name="ButtonSend" type="Button" parent="MarginContainer/VBoxContainer/Chat/Writing"]
layout_mode = 2
text = "Send"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/ButtonDisconnect" to="." method="_on_button_disconnect_pressed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/Chat/Writing/ChatMessage" to="." method="_on_chat_message_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Chat/Writing/ButtonSend" to="." method="_on_button_send_pressed"]
